@@ -98,6 +98,7 @@ class Sepa_Payment_Gateway extends WC_Payment_Gateway_WCPay {
 			<?php endif; ?>
 
 			<?php
+
 			if ( $display_tokenization ) {
 				$this->tokenization_script();
 				$this->saved_payment_methods();
@@ -118,6 +119,9 @@ class Sepa_Payment_Gateway extends WC_Payment_Gateway_WCPay {
 
 			</fieldset>
 			<?php
+
+			do_action( 'wcpay_payment_fields_sepa', $this->id );
+
 		} catch ( \Exception $e ) {
 			// Output the error message.
 			?>
